@@ -156,6 +156,8 @@ public enum FieldKey
     RECORDINGENDDATE,
     RECORDINGLOCATION,
     REMIXER,
+    ROONALBUMTAG,
+    ROONTRACKTAG,
     SECTION,
     SCRIPT,
     SINGLE_DISC_TRACK_NO,
