@@ -154,6 +154,8 @@ public enum ID3v22FieldKey
     RECORDINGENDDATE(ID3v22Frames.FRAME_ID_V2_USER_DEFINED_INFO, FrameBodyTXXX.RECORDINGENDDATE, Id3FieldType.TEXT),
     RECORDINGLOCATION(ID3v22Frames.FRAME_ID_V2_USER_DEFINED_INFO, FrameBodyTXXX.RECORDINGLOCATION, Id3FieldType.TEXT),
     REMIXER(ID3v22Frames.FRAME_ID_V2_REMIXED, Id3FieldType.TEXT),
+    ROONALBUMTAG(ID3v22Frames.FRAME_ID_V2_USER_DEFINED_INFO, FrameBodyTXXX.ROONALBUMTAG, Id3FieldType.TEXT),
+    ROONTRACKTAG(ID3v22Frames.FRAME_ID_V2_USER_DEFINED_INFO, FrameBodyTXXX.ROONTRACKTAG, Id3FieldType.TEXT),
     SCRIPT(ID3v22Frames.FRAME_ID_V2_USER_DEFINED_INFO, FrameBodyTXXX.SCRIPT, Id3FieldType.TEXT),
     SECTION(ID3v22Frames.FRAME_ID_V2_USER_DEFINED_INFO, FrameBodyTXXX.SECTION, Id3FieldType.TEXT),
     SINGLE_DISC_TRACK_NO(ID3v22Frames.FRAME_ID_V2_USER_DEFINED_INFO, FrameBodyTXXX.SINGLE_DISC_TRACK_NO, Id3FieldType.TEXT),
