@@ -458,6 +458,8 @@ public class ID3v22Frames extends ID3Frames
         tagFieldToId3.put(FieldKey.RECORDINGENDDATE, ID3v22FieldKey.RECORDINGENDDATE);
         tagFieldToId3.put(FieldKey.RECORDINGLOCATION, ID3v22FieldKey.RECORDINGLOCATION);
         tagFieldToId3.put(FieldKey.REMIXER, ID3v22FieldKey.REMIXER);
+        tagFieldToId3.put(FieldKey.ROONALBUMTAG, ID3v22FieldKey.ROONALBUMTAG);
+        tagFieldToId3.put(FieldKey.ROONTRACKTAG, ID3v22FieldKey.ROONTRACKTAG);
         tagFieldToId3.put(FieldKey.SCRIPT, ID3v22FieldKey.SCRIPT);
         tagFieldToId3.put(FieldKey.SECTION, ID3v22FieldKey.SECTION);
         tagFieldToId3.put(FieldKey.SINGLE_DISC_TRACK_NO, ID3v22FieldKey.SINGLE_DISC_TRACK_NO);
